--- a/templates/Sobre.html
+++ b/templates/Sobre.html
@@ -6,14 +6,14 @@
 
 <main>
     <div class="container my-4"> <!-- Espaçamento vertical -->
-        <h1 class="text-center">Quem Somos</h1> <!-- Centraliza o título -->
+        <h2 class="text-center">Quem Somos</h2> <!-- Centraliza o título -->
 
         <!-- Layout responsivo com Bootstrap -->
         <div class="row justify-content-center align-items-center"> <!-- Centraliza os itens -->
             <!-- Texto sobre a clínica -->
             <div class="col-md-6 text-center"> <!-- Alinha o texto ao centro -->
                 <p class="texto-sobre">
-                    A [Nome da clinica] é uma clínica de estética e bem-estar localizada em [endereço]. Fundada em 2025 por [nome], uma biomédica comprometida com a ciência e a beleza, a clínica é um espaço onde tratamentos avançados e uma equipe multidisciplinar se unem para oferecer resultados excepcionais. Nossa equipe é composta por nutricionistas, dentistas e outros profissionais especializados em estética e bem-estar, todos dedicados a proporcionar uma experiência única e personalizada para nossos clientes.
+                    A Lacerssi Aesthetic é uma clínica de estética e bem-estar localizada em São José dos Campos. Fundada em 2025 por Mariana Lacerda de Assis, uma biomédica comprometida com a ciência e a beleza, a clínica é um espaço onde tratamentos avançados e uma equipe multidisciplinar se unem para oferecer resultados excepcionais. Nossa equipe é composta por nutricionistas, dentistas e outros profissionais especializados em estética e bem-estar, todos dedicados a proporcionar uma experiência única e personalizada para nossos clientes.
                 </p>
             </div>
 
@@ -24,15 +24,17 @@
         </div>
     </div>
 
+    <hr>
+
     <div class="container my-4"> <!-- Espaçamento vertical -->
-        <h2 class="text-center">Como a [Nome da clinica] Foi Fundada</h2>
+        <h2 class="text-center">Como a Lacerssi Aesthetic Foi Fundada</h2>
 
         <!-- Layout responsivo para centralizar o texto -->
         <div class="row justify-content-center align-items-center"> <!-- Centraliza os elementos na linha -->
             <!-- Texto -->
             <div class="col-md-8 col-12 text-center"> <!-- Alinha o texto ao centro -->
                 <p class="texto-sobre2">
-                    [nome] sempre acreditou no poder da ciência para transformar a estética e o bem-estar. Com sua formação em biomedicina, ela percebeu a necessidade de uma abordagem inovadora no campo da estética. A partir dessa visão, ela reuniu um time de profissionais altamente qualificados para criar a [Nome da clinica]. Desde o início, a clínica se destacou pela combinação de tecnologia de ponta e uma abordagem holística para a beleza, sempre focada em resultados seguros e eficazes. Com um ambiente acolhedor e atendimento personalizado, rapidamente conquistamos nosso espaço no mercado de estética em [endereço].
+                    Mariana Lacerda de Assis sempre acreditou no poder da ciência para transformar a estética e o bem-estar. Com sua formação em biomedicina, ela percebeu a necessidade de uma abordagem inovadora no campo da estética. A partir dessa visão, ela reuniu um time de profissionais altamente qualificados para criar a Lacerssi Aesthetic. Desde o início, a clínica se destacou pela combinação de tecnologia de ponta e uma abordagem holística para a beleza, sempre focada em resultados seguros e eficazes. Com um ambiente acolhedor e atendimento personalizado, rapidamente conquistamos nosso espaço no mercado de estética em São José dos Campos.
                 </p>
             </div>
 
@@ -51,7 +53,7 @@
             <div class="row justify-content-center"> <!-- Centraliza o conteúdo -->
                 <div class="col-md-8 col-12 text-center"> <!-- Alinha ao centro -->
                     <p class="texto-sobre">
-                        Nossa missão na [Nome da clinica] é proporcionar tratamentos estéticos de alta qualidade, que respeitem a beleza natural e promovam o bem-estar de cada cliente. Acreditamos em uma abordagem holística para a estética, onde a saúde e a beleza se complementam. Nossa visão é ser referência em tratamentos estéticos, sempre inovando e proporcionando experiências excepcionais aos nossos clientes.
+                        Nossa missão na Lacerssi Aesthetic é proporcionar tratamentos estéticos de alta qualidade, que respeitem a beleza natural e promovam o bem-estar de cada cliente. Acreditamos em uma abordagem holística para a estética, onde a saúde e a beleza se complementam. Nossa visão é ser referência em tratamentos estéticos, sempre inovando e proporcionando experiências excepcionais aos nossos clientes.
                     </p>
                     
                     <h6 class="subtitulo-sobre">Nossos valores incluem:</h6> <!-- Centraliza o subtítulo -->
@@ -70,7 +72,7 @@
     
                         <li>
                             Integridade: Atuamos com ética e transparência, garantindo segurança e confiança em nossos serviços.
-                            Convidamos você a conhecer a [Nome da clinica] e descobrir como nossa equipe pode ajudá-lo a alcançar seus objetivos de beleza e bem-estar. Estamos prontos para recebê-lo em [endereço] para uma experiência transformadora.
+                            Convidamos você a conhecer a Lacerssi Aesthetic e descobrir como nossa equipe pode ajudá-lo a alcançar seus objetivos de beleza e bem-estar. Estamos prontos para recebê-lo em São José dos Campos para uma experiência transformadora.
                         </li>
                     </ul>
                 </div>
