--- a/templates/index.html
+++ b/templates/index.html
@@ -42,12 +42,12 @@
 
         <div class="container my-4"> <!-- Adiciona espaçamento vertical -->
             <div class="text-center"> <!-- Centraliza o título -->
-                <h1 class='titulo-index'>Clínica de Estética em [endereço], SP</h1>
+                <h1 class='titulo-index'>Clínica de Estética em São José dos Campos, SP</h1>
             </div>
     
             <div class='txt-index text-center'> <!-- Centraliza o texto -->
                 <p>
-                    Bem-vindo à [Nome da clinica], sua clínica de estética em [endereço]! Nossa missão é proporcionar a você uma experiência única de beleza e bem-estar.
+                    Bem-vindo à Lacerssi Aesthetics, sua clínica de estética em São José dos Campos! Nossa missão é proporcionar a você uma experiência única de beleza e bem-estar.
                 </p>
     
                 <p>
