--- a/templates/base.html
+++ b/templates/base.html
@@ -4,43 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lacerssi</title>
-
     <link rel='stylesheet' href="../static/css/style.css">
     <link rel='stylesheet' href='../static/css/normalize.css'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 
     <section id='navbar'>
         <nav class='navbar'>
 
             <div>
-                <a class="navbar-brand" href="/">
-                    <img src="/static/imagens/logo.png" alt="Logo" style="height: 40px; width: 40px;">
+                <a href="/">
+                    <img src="/static/imagens/logo.png" alt="Logo" class='container-img'>
                     Lacerssi Aesthetics
                 </a>
             </div>
 
             <div>
                 <ul class='container-itens'>
-                    <li>
-                        <a href="/">Home</a>
-                    </li>
-                    <li>
-                        <a href="/Sobre">Sobre</a>
-                    </li>
-                    <!-- Dropdown para Tratamentos -->
-                    <li>
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Tratamentos
-                        </a>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/Sobre">Sobre</a></li>
+                    
+
+                    <li class="dropdown">
+                        <a class="" href="#">Tratamentos</a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/Tratamentos">Faciais</a></li>
-                            <li><a class="dropdown-item" href="/Tratamentos#corporais">Corporais</a></li>
-                            <li><a class="dropdown-item" href="/Tratamentos#depilacao">Depilação</a></li>
-                            <li><a class="dropdown-item" href="/Tratamentos#massagem">Massagem</a></li>
+                            <li><a href='/Tratamentos'>Faciais</a></li>
+                            <li><a href='/Tratamentos#corporais'>Corporais</a></li>
+                            <li><a href='/Tratamentos#depilacao'>Depilação</a></li>
+                            <li><a href='/Tratamentos#massagem'>Massagem</a></li>
                         </ul>
                     </li>
+                    <li><a href="/">Contato</a></li>
                 </ul>
             </div>
     
@@ -55,33 +51,31 @@
         {% endblock%} 
     
         <footer>
-            <div class="container py-4"> <!-- Adiciona padding vertical -->
-                <div class="row"> <!-- Sistema de grid para controle do layout -->
-                    <!-- Contatos -->
-                    <div class="col-lg-6 col-md-6 col-sm-12 contatos"> <!-- Responsivo com espaçamento customizado -->
-                        <h3 class="titulo-footer">Contato</h3>
-                        <ul class="list-unstyled"> <!-- Remove as marcações de lista padrão -->
-                            <li>Endereço: R. Eng. Prudente Meireles de Morais, 1000, São José dos Campos - SP</li>
-                            <li>E-mail: <a href="mailto:lacerssi_contato@hotmail.com">lacerssi_contato@hotmail.com</a></li>
-                            <li>Whatsapp: (12) 91234-5678</li>
-                            <li>Telefone: (12) 3921-7066</li>
-                        </ul>
-                    </div>
-    
-                    <!-- Redes Sociais -->
-                    <div class="col-lg-6 col-md-6 col-sm-12 redes"> <!-- Responsivo com espaçamento customizado -->
-                        <h3 class="titulo-footer">Redes Sociais</h3>
-                        <ul class="list-unstyled"> <!-- Mantém estilo sem marcadores -->
-                            <li><a href="https://www.instagram.com/beauteclinnic/" target="_blank">Instagram</a></li>
-                            <li><a href="https://www.facebook.com/beauteclinnic/" target="_blank">Facebook</a></li>
-                        </ul>
-                    </div>
-                </div>
-    
-                <!-- Direitos reservados -->
+            <div class='container-footer'>
                 <div>
-                    <a href='https://github.com/victor4486'  class="tds">® Copyright by Victor4489</a>
+                    <h1>Contato</h1>
+                    <ul>
+                        <li>Endereço: R. Eng. Prudente Meireles de Morais, 1000, São José dos Campos - SP</li>
+                        <li>E-mail: <a href="mailto:lacerssi_contato@hotmail.com">lacerssi_contato@hotmail.com</a></li>
+                        <li>Whatsapp: (12) 91234-5678</li>
+                        <li>Telefone: (12) 3921-7066</li>
+                    </ul>
+                </div>
+
+                <div>
+                    <h1>Redes Sociais</h1>
+
+                    <!--icons-->
+                    <a class="fa fa-facebook" href='https://www.facebook.com/profile.php?id=100017005422744'></a>
+                    <a class="fa fa-instagram" href='https://www.instagram.com/vitorsss__/'></a>
+                    <a class="fa fa-linkedin" href='https://www.linkedin.com/in/victor-hugo-barbosa-souza-116b81178/'></a>
                 </div>
             </div>
+    
+            
+            <div class='copyright'>
+                <a href='https://github.com/victor4486'>® Copyright by Victor4489</a>
+            </div>
+
         </footer>
 </body>
