--- a/static/css/style.css
+++ b/static/css/style.css
@@ -119,50 +119,98 @@ footer h1{
       opacity: 0.7;
   }
 
-/* index */
-.titulo-index {
-    font-size: 25px;
-}
+/* ############# corousel ############# */
 
-.txt-index {
-    align-items: center;
-    margin-bottom: 50px;
-    font-size: 15px;
-}
+.gallery-wrap {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 70vh;
+  }
+  
+  .item {
+    flex: 1;
+    height: 100%;
+    background-position: center;
+    background-size: cover;
+    background-repeat: none;
+    transition: flex 0.8s ease;
+  }
+  .item:hover {
+    flex: 7;
+  }
+  
+  .item-1 {
+    background-image: url('/static/imagens/acupuntura.jpg');
+  }
+  
+  .item-2 {
+    background-image: url('/static/imagens/creme.jpg');
+  }
+  
+  .item-3 {
+    background-image: url('/static/imagens/intradermo.jpg');
+  }
+  
+  .item-4 {
+    background-image: url("/static/imagens/clinica.jpg");
+  }
+  
+  .item-5 {
+    background-image: url('/static/imagens/coracao.jpg');
+  }
+  
+  .social {
+    position: absolute;
+    right: 35px;
+    bottom: 0;
+  }
+  .social img {
+    display: block;
+    width: 32px;
+  }
+  
 
-.imagens-carousel {
-    width: 70vh;
-    height: auto;
+/* ############# index ############## */
+
+.container-text-index h1, p{
     display: flex;
     justify-content: center;
-    align-items: center;
-    margin: auto;
 }
 
-.display-flex-index {
+.container-text-index h1{
+    font-size: 2rem;
+    padding: 1.5rem;
+}
+
+.container-img-index{
     display: flex;
-    justify-content: space-between;
+    justify-content:space-evenly;
+    text-decoration: none;
+    padding: 5% 0px 5% 0px;
+}
+
+.container-img-index a{
+    text-decoration: none;
+    color: var(--text-color1);
+}
+
+.container-img-button {
+    display: flex;
+    justify-content: center;
+    border: 3px solid var(--primary-color);
+    border-radius: 5%;
+    padding: 2%;
+    transition: transform 0.3s ease;
+}
+
+.container-img-button:hover {
+    transform: translateY(-10px);
 }
 
 .imagens-index {
     width: 250px;
     height: 250px;
-}
-
-.text {
-    transition: transform 0.3s ease; 
-    border: 3px solid salmon; 
-    border-radius: 10px;     
-    padding: 20px;           
-    width: 100%;             
-    max-width: 400px;        
-    height: auto;            
-    text-align: center;      
-    color: black;  
-}
-
-.text:hover {
-    transform: translateY(-10px); /* Levanta o elemento 10 pixels */
 }
 
 /* Sobre */
