--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
                             <li><a href='/Tratamentos#massagem'>Massagem</a></li>
                         </ul>
                     </li>
-                    <li><a href="/">Contato</a></li>
+                    <li><a href="/contato">Contato</a></li>
                 </ul>
             </div>
     
