--- a/static/css/style.css
+++ b/static/css/style.css
@@ -299,7 +299,15 @@ footer h1{
 .button-contato{
     width: 10%;
     height: 15%;
-    color: var(--backgroud-button);
+    margin-top: 3%;
+    color: var(--background-color);
     background-color: var(--primary-color);
-    border-radius: 10%;
+    border-radius: 2%;
+    border: none;
+    font-size: 1.2rem;
+    transition: 0.3s ease;
+}
+
+.button-contato:hover{
+    opacity: 0.7;
 }
