--- a/templates/contato.html
+++ b/templates/contato.html
@@ -10,46 +10,50 @@
         <section class='form'>
             <form>
                 <fieldset>
+                    <div> 
+                        <label>Nome</label>
+                        <input type='text' name='nome' id='nome' required>
+                    </div>  
 
-                <br>
+                    <div> 
+                        <label>Email</label>
+                        <input type='email' name='email' id='email' required>
+                    </div>
 
-                <div> 
-                    <label>Nome</label>
-                    <input type='text' name='nome' id='nome' required>
-                </div>  
+                    <div class='inputbox'> 
+                        <label>Data de nascimento</label>
+                        <input type='date' name='nascimento' id='nascimento' class='inputUser' required>
+                    </div>
 
-                <br>
+                    <div>
+                        <label>Sexo:</label>
+                        <input type="radio" id='masculino' name='sexo' value='masculino' required>
+                        <label for='masculino'>Masculino</label>
+                        <input type="radio" id='feminino' name='sexo' value='feminino' required>
+                        <label for='feminino'>Feminino</label>
+                        <input type="radio" id='outros' name='sexo' value='outros' required>
+                        <label for='outros'>Outros</label>
+                    </div>
 
-                <div> 
-                    <label>Email</label>
-                    <input type='email' name='email' id='email' required>
-                </div>
+                    <br>
 
-                <br>
+                    <div>
+                        <label>Eu sou:</label>
+                        <input type="radio" id='PF' name='tipo' value='PF' required>
+                        <label for='PF'>Estou interessado em realizar um tratamento</label>
+                        <input type="radio" id='CL' name='tipo' value='CL' required>
+                        <label for='CL'>Sou cliente</label>
+                        <input type="radio" id='PJ' name='tipo' value='PJ' required>
+                        <label for='PJ' >Sou fornecedor</label>
+                    </div>
 
-                <div>
-                    <label>Eu sou:</label>
-                    
-                    <input type="radio" id='PF' name='PF' value='PF' required>
-                    <label>Estou interessado em realizar um tratamento</label>
+                    <div>
+                        <label>Descrição:</label>
+                        <textarea class="form-control" name="descricao" id="descricao" rows="8" style='width:26em' required></textarea>
+                    </div>
 
-                    <input type="radio" id='PF' name='PJ' value='PJ'>
-                    <label>Sou fornecedor</label>
-
-                    <input type="radio" id='PF' name='CL' value='CL'>
-                    <label>Sou cliente</label>
-                </div>
-                
-                <br>
-
-                <div>
-                    <label>Descrição</label>
-                    <textarea class="form-control" name="descricao" id="descricao" rows="8" style='width:26em' required></textarea>
-                </div>
-
-                <button class='button-contato'>Enviar</button>
-                
-            </fieldset>
+                    <button class='button-contato'>Enviar</button>
+                </fieldset>
             </form> 
         </section>
     </div>
